Fix bad spacing in nested lists on participation polociy page (Bug 887426)

--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -102,6 +102,10 @@
     }
   }
 
+  li > ul {
+    margin-bottom: @baseLine;
+  }
+
 }
 
 /* Tablet Layout: 760px */
